--- a/myapp/templates/header.html
+++ b/myapp/templates/header.html
@@ -4,9 +4,9 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-          <img src="{% static 'img/neoolive-logo.png' %}" width="100%" height="100%" alt="">
+          {% comment %} <img src="{% static 'img/neoolive-logo.png' %}" width="100%" height="100%" alt=""> {% endcomment %}
         <!-- <img src="static/img/neoolive-logo.jpg" alt=""> -->
-        <!-- <h1 class="sitename">NeoOlive</h1> -->
+        <h1 class="sitename">NeoOlive</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
